<resources>
    <string name="app_name">Read Pro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_library">My Library</string>
    <string name="read_pro">Read Pro</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_you_email">Enter you email</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="user_name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="create">Create</string>
    <string name="already_have_an_account">Already have an account?</string>

    <!-- home fragment -->
    <string name="app_read">Read</string>
    <string name="book_of_the_day">Book of the Day</string>
    <string name="selected_the_best_read">Selected the best read for you day!</string>
    <string name="new_arrival">New arrival</string>
    <string name="more">More</string>
    <string name="new_arrival_subtitle">Latest books for you to enjoy</string>
    <string name="best_selling">Best selling</string>
    <string name="best_selling_subtitle">Best books selected for you</string>
    <string name="recommended_title">Recommended for you</string>
    <string name="recommended_subtitle">We think you\'ll like these</string>

    <!-- book detail -->
    <string name="book_detail">Book Detail</string>
    <string name="book_detail_description">Description</string>
    <string name="book_detail_customer_rating">Customer Rating:</string>
    <string name="book_detail_customer_review">Customer Reviews</string>

    <string name="loading">Loading...</string>

    <!-- cart -->
    <string name="my_cart">My Cart</string>
    <string name="order">Order</string>
    <string name="clear">Clear</string>
    <string name="order_summary">Order Summary</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>