<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.HomeFragment">
    <!-- TODO: Update blank fragment layout -->
    <!-- Menu -->
    <FrameLayout
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true">
        <!-- App logo -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/app_name_underline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_read"
                android:textColor="@color/black"
                android:textSize="28dp"
                android:textStyle="bold" />

            <View
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:layout_below="@+id/app_name_underline"
                android:background="@color/color_primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/app_name_underline"
                android:text="Pro"
                android:textColor="@color/black"
                android:textSize="28dp"
                android:textStyle="bold" />
        </RelativeLayout>
        <!-- Cart logo -->
        <ru.nikartm.support.ImageBadgeView
            android:id="@+id/cart_badge_view"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:padding="6dp"
            android:src="@drawable/ic_outline_shopping_cart"
            app:ibv_badgeColor="@color/color_primary"
            app:ibv_badgeTextColor="@color/white"
            app:ibv_badgeTextSize="12sp"
            app:ibv_fixedBadgeRadius="12dp" />


    </FrameLayout>
    <!-- scroll view -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_menu"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:scrollbars="none">
>>>>>>> de3e43da3cf739bf0cfedabe39100c566d130ef6

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/book_of_the_day"
                android:textColor="@color/black"
                android:textSize="28dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/selected_the_best_read"
                android:textColor="@color/black"
                android:textSize="16dp" />
            <!-- Slider -->
            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/home_slider"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="@color/color_primary"
                app:sliderIndicatorUnselectedColor="@color/gray"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true" />
            <!-- New arrival -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/new_arrival"
                    android:textColor="@color/black"
                    android:layout_gravity="start|center_vertical"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_new_arrival_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:layout_gravity="end|center_vertical"
                    android:textColor="@color/red"
                    android:textSize="18sp"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_arrival_subtitle"
                android:textColor="@color/black"
                android:textSize="16dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/new_arrival_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- best selling -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/best_selling"
                    android:textColor="@color/black"
                    android:layout_gravity="start|center_vertical"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_best_selling_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:layout_gravity="end|center_vertical"
                    android:textColor="@color/red"
                    android:textSize="18sp"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_selling_subtitle"
                android:textColor="@color/black"
                android:textSize="16dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/best_selling_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:listitem="@layout/best_selling_item" />
            <!-- recommended -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/recommended_title"
                    android:textColor="@color/black"
                    android:layout_gravity="start|center_vertical"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/tv_product_recommended_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:layout_gravity="end|center_vertical"
                    android:textColor="@color/red"
                    android:textSize="18sp"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommended_subtitle"
                android:textColor="@color/black"
                android:textSize="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommended_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

    <!-- loading screen -->
    <FrameLayout
        android:id="@+id/loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/color_primary" />
    </FrameLayout>



</RelativeLayout>