<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity">




    <LinearLayout
        android:id="@+id/layout_login"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_pro"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/green"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="15dp"
            android:textColor="@color/gray"/>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_email"
       android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/layout_login"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/email"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/text_field_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <com.google.android.material.textfield.TextInputEditText
              android:drawableEnd="@drawable/ic_baseline_message_24"
              android:inputType="textEmailAddress"
              android:hint="@string/enter_you_email"
              android:id="@+id/edit_email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
      </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_pass"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_baseline_visibility_24"
                android:hint="@string/enter_you_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="right"
        android:id="@+id/layout_forget_password"
        android:layout_below="@+id/layout_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginRight="20dp"
            android:id="@+id/text_proget_password"
            android:layout_width="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/green"
            android:layout_height="wrap_content"
            android:text="Forget password"/>
    </LinearLayout>

    <!--button login-->
    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/button_login"
        android:layout_below="@+id/layout_forget_password"
        android:layout_marginLeft="20dp"

        android:layout_marginRight="20dp"
        android:background="@drawable/background_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAlignment="center"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:id="@+id/divide_or_"
        android:layout_below="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/gray">

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   OR   "/>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:background="@color/gray">

        </LinearLayout>

    </LinearLayout>

<!-- login with social-->
    <LinearLayout
        android:id="@+id/button_google"
        android:layout_marginTop="10dp"
         android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_below="@id/divide_or_"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_login_social"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="4dp"
            android:layout_marginLeft="20dp"

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/google"/>

        <TextView
            android:padding="10dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:text="Login with Google"
            android:textSize="20dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_facebook"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_below="@id/button_google"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_login_social"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="4dp"
            android:layout_marginLeft="20dp"

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/facebook"/>

        <TextView
            android:padding="10dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:text="Login with Facebook"
            android:textSize="20dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/button_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "/>
        <TextView
            android:id="@+id/text_signUP"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/green"
            android:layout_height="wrap_content"
            android:text="SignUp"/>

    </LinearLayout>










</RelativeLayout>